cmake_minimum_required(VERSION 2.8)
project(bedawang C)

file(READ ${bedawang_SOURCE_DIR}/src/config/version.h BEDAWANG_VERSION_H_CONTENTS)
string(REGEX MATCH "BWG_VERSION_FLAVOUR[ \t]+(BWG_[A-Z]+)" BEDAWANG_VERSION_FL ${BEDAWANG_VERSION_H_CONTENTS})
string(REGEX MATCH "(BWG_CURRENT|BWG_STABLE|BWG_ALPHA|BWG_BETA|BWG_PRERELEASE|BWG_RELEASE)" BEDAWANG_VERSION_FL ${BEDAWANG_VERSION_FL})
string(REGEX MATCH "BWG_VERSION_MAJOR[ \t]+([0-9]+)" BEDAWANG_VERSION_MJ ${BEDAWANG_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" BEDAWANG_VERSION_MJ ${BEDAWANG_VERSION_MJ})
string(REGEX MATCH "BWG_VERSION_MINOR[ \t]+([0-9]+)" BEDAWANG_VERSION_MI ${BEDAWANG_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" BEDAWANG_VERSION_MI ${BEDAWANG_VERSION_MI})
string(REGEX MATCH "BWG_VERSION_PATCH[ \t]+([0-9]+)" BEDAWANG_VERSION_PT ${BEDAWANG_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" BEDAWANG_VERSION_PT ${BEDAWANG_VERSION_PT})
string(REGEX MATCH "BWG_VERSION_SUFFX[ \t]+([0-9]+)" BEDAWANG_VERSION_SX ${BEDAWANG_VERSION_H_CONTENTS})
string(REGEX MATCH "([0-9]+)" BEDAWANG_VERSION_SX ${BEDAWANG_VERSION_SX})

string(COMPARE EQUAL ${BEDAWANG_VERSION_FL} "BWG_RELEASE" BEDAWANG_RELEASE)
if(BEDAWANG_RELEASE)
    set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}.${BEDAWANG_VERSION_PT})
    set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI})
else(BEDAWANG_RELEASE)
    string(COMPARE EQUAL ${BEDAWANG_VERSION_FL} "BWG_PRERELEASE" BEDAWANG_PRERELEASE)
    if(BEDAWANG_PRERELEASE)
        set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}.${BEDAWANG_VERSION_PT}-rc${BEDAWANG_VERSION_SX})
        set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}-rc${BEDAWANG_VERSION_SX})
    else(BEDAWANG_PRERELEASE)
        string(COMPARE EQUAL ${BEDAWANG_VERSION_FL} "BWG_BETA" BEDAWANG_BETA)
        if(BEDAWANG_BETA)
            set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}.${BEDAWANG_VERSION_PT}-b${BEDAWANG_VERSION_SX})
            set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}-b${BEDAWANG_VERSION_SX})
        else(BEDAWANG_BETA)
            string(COMPARE EQUAL ${BEDAWANG_VERSION_FL} "BWG_ALPHA" BEDAWANG_ALPHA)
            if(BEDAWANG_ALPHA)
                set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}.${BEDAWANG_VERSION_PT}-a${BEDAWANG_VERSION_SX})
                set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}-a${BEDAWANG_VERSION_SX})
            else(BEDAWANG_ALPHA)
                string(COMPARE EQUAL ${BEDAWANG_VERSION_FL} "BWG_STABLE" BEDAWANG_STABLE)
                if(BEDAWANG_STABLE)
                    set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}-STABLE)
                    set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.${BEDAWANG_VERSION_MI}-STABLE)
                else(BEDAWANG_STABLE)
                    set(BEDAWANG_VERSION ${BEDAWANG_VERSION_MJ}.0-CURRENT)
                    set(BEDAWANG_LIBVERSION ${BEDAWANG_VERSION_MJ}.0-CURRENT)
                endif(BEDAWANG_STABLE)
            endif(BEDAWANG_ALPHA)
        endif(BEDAWANG_BETA)
    endif(BEDAWANG_PRERELEASE)
endif(BEDAWANG_RELEASE)

set(PACKAGE "bedawang")
set(PACKAGE_NAME ${PACKAGE})
set(PACKAGE_VERSION ${BEDAWANG_VERSION})

add_subdirectory(src)